<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green">

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_green"
        android:orientation="vertical"
        tools:context=".ui.fragments.AddVisitFrag">

        <TextView
            android:id="@+id/txtVisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/add_visit"
            android:textAlignment="center"
            android:textColor="@color/dark_green"
            android:textSize="36sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtVisitName"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/dark_green"
            app:boxStrokeColor="@color/dark_green"
            app:hintTextColor="@color/dark_green">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/visit_name"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtDescriptionVisit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/dark_green"
            app:boxStrokeColor="@color/dark_green"
            app:hintTextColor="@color/dark_green">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/description"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtPriceVisit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/dark_green"
            app:boxStrokeColor="@color/dark_green"
            app:hintTextColor="@color/dark_green">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/price"
                android:inputType="numberDecimal"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edtNotesVisit"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:textColorHint="@color/dark_green"
            app:boxStrokeColor="@color/dark_green"
            app:hintTextColor="@color/dark_green">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/notes"
                android:textCursorDrawable="@null"
                android:textSize="18sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnDateAddVisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/bg_button"
            android:padding="5dp"
            android:text="@string/date_first"
            android:textColor="@color/light_green"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txtDateAddVisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:padding="5dp" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/switchStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layoutDirection="rtl"
            android:text="@string/status"
            android:textColor="@color/dark_green"
            android:textSize="24sp" />

        <Button
            android:id="@+id/btnSaveVisit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_button"
            android:text="@string/save"
            android:textColor="@color/light_green" />

    </LinearLayout>
</ScrollView>