<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:orientation="vertical"
    tools:context=".ui.fragments.ContractsFrag">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/build_contract"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="36sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtPeriod"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:layoutDirection="rtl"
        android:textColorHint="@color/dark_green"
        app:boxStrokeColor="@color/dark_green"
        app:endIconMode="clear_text"
        app:hintTextColor="@color/dark_green">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/period"
            android:inputType="number" />

    </com.google.android.material.textfield.TextInputLayout>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dark_green"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/status_only"
                android:textAlignment="center"
                android:textColor="@color/light_green"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/price"
                android:textAlignment="center"
                android:textColor="@color/light_green"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/date_first"
                android:textAlignment="center"
                android:textColor="@color/light_green"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/visit_name"
                android:textAlignment="center"
                android:textColor="@color/light_green"
                android:textSize="18sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1">



        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/visitsRv"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">
    <Button
        android:id="@+id/btnSaveContract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_button"
        android:text="@string/save"
        android:layout_centerInParent="true"
        android:textColor="@color/light_green" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btnAddVisit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:clickable="true"
        android:tint="@color/light_green"
        app:backgroundTint="@color/dark_green"
        app:srcCompat="@drawable/add" />
</RelativeLayout>


</LinearLayout>