<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:orientation="vertical"
    tools:context=".ui.fragments.SearchVisitsFrag">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layoutDirection="ltr"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/deleteDateSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:background="@color/light_green"
            android:visibility="gone"
            app:srcCompat="@drawable/clear"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/txtDateSearch"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text=""
            android:textAlignment="center"
            android:textColor="@color/dark_green"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/btnDateSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:background="@drawable/bg_button"
            android:padding="5dp"
            android:text="@string/date_first"
            android:textColor="@color/light_green"
            android:textSize="18sp" />

    </LinearLayout>

    <com.google.android.material.textfield.MaterialAutoCompleteTextView
        android:id="@+id/edtRegionSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:background="@drawable/auto_bg"
        android:hint="@string/region"
        android:padding="18dp"
        android:textColorHint="@color/dark_green"
        android:textCursorDrawable="@null" />

    <Button
        android:id="@+id/btnSearchVisits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="5dp"
        android:background="@drawable/bg_button"
        android:text="@string/search"
        android:textColor="@color/light_green" />

    <androidx.cardview.widget.CardView
        android:visibility="gone"
        android:id="@+id/searchVisitsCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dark_green"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        app:cardUseCompatPadding="true"
        tools:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_margin="3dp"
            android:layoutDirection="ltr"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:gravity="end"
                android:text="@string/status_only"
                android:textColor="@color/light_green"
                android:textSize="18sp" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/price"
                android:textColor="@color/light_green"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/date_first"
                android:textColor="@color/light_green"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/client_name"
                android:textColor="@color/light_green"
                android:textSize="18sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:text="@string/visit_name"
                android:textColor="@color/light_green"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/visitsSearchRv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="5dp" />
</LinearLayout>