<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_green"
    android:orientation="vertical"
    tools:context=".ui.fragments.AddRegionsFrag">

    <TextView
        android:id="@+id/txtRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:text="@string/add_region"
        android:textAlignment="center"
        android:textColor="@color/dark_green"
        android:textSize="36sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/edtRegionAdd"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        app:boxStrokeColor="@color/dark_green"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:textColorHint="@color/dark_green"
        app:hintTextColor="@color/dark_green">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textCursorDrawable="@null"
            android:hint="@string/region" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSaveRegion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_button"
        android:text="@string/save"
        android:textColor="@color/light_green" />
</LinearLayout>